[gd_scene load_steps=36 format=2]

[ext_resource path="res://Museum_room_3_preview.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://rafaela.png" type="Texture" id=3]
[ext_resource path="res://item2.png" type="Texture" id=4]
[ext_resource path="res://item3.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 256, 48, 16, 48, 16, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 272, 16, 272, 16, 48, 32, 48 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 240, 64, 32, 64, 32, 48, 240, 48 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 256, 272, 240, 272, 240, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 80, 112, 16, 112, 16, 64, 80, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 256, 112, 192, 112, 192, 64, 256, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 176, 144, 96, 144, 96, 112, 176, 112 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 32, 272, 0, 272, 0, 240, 32, 240 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 272, 272, 256, 272, 256, 240, 272, 240 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 79.2168, 159.19, 33.4028, 159.19, 33.4028, 134.676, 79.2168, 134.676 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 238.762, 158.387, 194.154, 158.387, 194.154, 137.087, 238.762, 137.087 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 94.89, 223.025, 48.2722, 223.025, 48.2722, 182.034, 94.89, 182.034 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 222.285, 223.025, 175.667, 223.025, 175.667, 181.23, 222.285, 181.23 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 228.313, 279.69, 187.322, 279.69, 187.322, 247.942, 228.313, 247.942 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 74.3943, 277.279, 36.6178, 277.279, 36.6178, 245.129, 74.3943, 245.129 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 165.62, 288, 107.348, 288, 107.348, 279.288, 165.62, 279.288 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 80, 32, 0, 32, 0, 0, 80, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 272, 32, 192, 32, 192, 0, 272, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 32, 48, 0, 48, 0, 32, 32, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 272, 48, 240, 48, 240, 32, 272, 32 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 167.228, 30.6723, 107.348, 30.6723, 107.348, 0.531525, 167.228, 0.531525 )

[sub_resource type="TileSet" id=1]
0/name = "Museum_room_3_preview.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 272, 288 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Museum_room_3_preview.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 288, 272, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 18 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "direita",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "esquerda",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "tras",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 6, 8.5 )

[sub_resource type="CircleShape2D" id=29]
radius = 12.0

[sub_resource type="CapsuleShape2D" id=30]
height = 2.0

[node name="Node2D" type="Node2D"]

[node name="room1" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
show_collision = true
format = 1
tile_data = PoolIntArray( -655360, 536870912, 0, 524288, 536870913, 0 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 92, 161 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player"]
frames = SubResource( 27 )
animation = "direita"

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 0, 6 )
shape = SubResource( 28 )

[node name="RichTextLabel" type="RichTextLabel" parent="player"]
margin_left = -116.0
margin_top = -62.0
margin_right = 124.0
margin_bottom = -26.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Item2" type="Sprite" parent="player"]
position = Vector2( 22, 49 )
texture = ExtResource( 5 )

[node name="Item3" type="Sprite" parent="player"]
position = Vector2( -17, 53 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 137, -76 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -12, -6 )
shape = SubResource( 29 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 104, 47 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 5, -1 )
shape = SubResource( 30 )

[connection signal="body_entered" from="Area2D" to="player" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="player" method="_on_Area2D2_body_entered"]
